# online-board-game

./: Cargo.toml  log4rs.toml
client/: .gitignore
client/Assets/: Game Controller.prefab  Player.prefab
client/Assets/Plugins/websocket/: WebSocket.cs
client/Assets/Prefabs/: Game Controller.prefab
client/Assets/Scenes/: Main.unity
client/Assets/Scripts/: AsyncUtils.cs  Data.cs  GameController.cs
client/ProjectSettings/: ProjectSettings.asset
server/: Cargo.toml  log4rs.toml
server/src/: client_controller.rs  game.rs  game_controller.rs  main.rs
server/static/: index.html  main.js
src/: client_controller.rs  game.rs  game_controller.rs  main.rs
static/: index.html  main.js
